--- a/src/app/InformPage.css
+++ b/src/app/InformPage.css
@@ -5,7 +5,7 @@
 
 .inform-container {
     width: 100%;
-    height: 80vh;
+  
     background-color:white ;
     display: flex;   
     align-items: center;
@@ -32,13 +32,15 @@
     font-size: 20px;
   }
 
-  form input{
-    border:0;
+  form input {
+    width: 20;
+    height: 40px;
     margin : 10px 0;
     padding : 4px;
     outline :none;
     background: #f5f5f5;
     font-size: 16px;
+    border-radius: 5px;
   }
 
   form button{
@@ -53,3 +55,23 @@
     margin: 10px;
     align-items: center;
   }
+
+  .name{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+  }
+
+  form textarea{
+    width: 100%;
+    height: 59px;
+    padding: 15px;
+    outline: none;
+    resize: none;
+    font-size: 16px;
+    margin-top: 10px;
+    border-radius: 5px;
+    background: #f5f5f5;
+  }
+
