--- a/src/Component/DoughnutChart.css
+++ b/src/Component/DoughnutChart.css
@@ -8,8 +8,11 @@
   flex-direction: column;
   align-items: center; /* Center vertically */
   margin-top: 20px;
+  font-family: 'Kanit', sans-serif;
+  font-size: 15px;
 }
 
 .chart-wrapper {
   width: 300px; 
+  font-family: 'Kanit', sans-serif;
 }
