--- a/src/app/LoginPage.css
+++ b/src/app/LoginPage.css
@@ -24,12 +24,10 @@
   
   .Username,
   .Password {
-    padding: 15px 20px;
+    /* padding: 15px 20px; */
     margin-bottom: 5px;
     border: none;
-    border-radius: 5px;
-    background: #EEE;
-    width: 80%;
+    width: 80%;  
     max-width: 300px;
     align-items: center;
 }
