--- a/src/Component/DoughnutChart.css
+++ b/src/Component/DoughnutChart.css
@@ -6,7 +6,7 @@
 .chart-container {
   display: flex;
   flex-direction: column;
-  align-items: center; /* Center vertically */
+  /* align-items: center; Center vertically */
   margin-top: 20px;
   font-family: 'Kanit', sans-serif;
   font-size: 15px;
