--- a/src/app/AddPage.css
+++ b/src/app/AddPage.css
@@ -1,12 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Overpass:wght@800&display=swap");
 * {
-  font-family: "Overpass", sans-serif;
+  font-family: "Kanit", sans-serif;
 }
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 .Icon {
   display: flex;
   justify-content: center;
-  padding-top: 80px;
+  padding-top: 60px;
 }
 .Container {
   margin: 0 auto;
@@ -17,7 +20,7 @@
 .ID_Text {
   padding-top: 40px;
   padding-bottom: 5px;
-  margin-left: 40px;
+  margin-left: 50px;
   color: #000;
   font-size: 20px;
   font-style: normal;
@@ -33,12 +36,13 @@
   border: none;
   border-radius: 10px;
   background: #eee;
+  font-family: "Kanit", sans-serif;
   font-size: 15px;
 }
 .NameText {
   padding-top: 20px;
   padding-bottom: 5px;
-  margin-left: 40px;
+  margin-left: 50px;
   color: #000;
   font-size: 20px;
   font-style: normal;
@@ -55,23 +59,32 @@
   border-radius: 10px;
   background: #eee;
   font-size: 15px;
+  margin-bottom: 40px;
 }
 .Box {
-  margin-top: 40px;
+  margin-inline: 15px;
   padding-left: 30px;
-  padding-top: 10px;
-  padding-bottom: 10px;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   background-color: #aae1f0fa;
   border-radius: 10px;
+  margin-bottom: 5px;
 }
 .AddButton {
   display: flex;
-  margin-left: 150px;
-  padding-top: 10px;
-  width: 50px;
-  height: 50px;
+  padding-top: 3px;
+  margin-top: 15px;
+  margin-right: 5px;
+  width: 45px;
+  height: 40px;
   border: none;
   background-color: transparent;
+}
+.PName {
+  margin-top: 10px;
+}
+.PID {
+  margin-top: 1px;
+  margin-bottom: 10px;
 }
