--- a/src/app/Dashboard/DashboardPage.css
+++ b/src/app/Dashboard/DashboardPage.css
@@ -19,6 +19,7 @@
 .NperPtext{
 /* margin-top: 30px; */
 padding-inline: 40px;
+font-weight: bold;
 /* background-color: aqua; */
 }
 .NperP{
@@ -34,14 +35,16 @@ font-weight: bold;
   display: flex;
   flex-direction: row;
   /* background-color: rgb(235, 235, 235); */
-  background-color:  #a4f1b5;;
+  background-color:  #d3fddc;
   border-radius: 20px;
+  border: 2px solid #D4D4D4;
   margin-bottom: 130px;
 }
 
 .nursecount{
   margin: 10px 20px;
   font-family: 'Kanit', sans-serif;
+  font-weight: bold;
   /* background-color: blue; */
   /* padding-bottom: 80px; */
 }
@@ -49,6 +52,7 @@ font-weight: bold;
 .pateintcount{
   margin: 10px 20px;
   font-family: 'Kanit', sans-serif;
+  font-weight: bold;
   /* background-color: rgb(34, 150, 82); */
   /* padding-bottom: 80px; */
   
