--- a/src/app/LoginPage.css
+++ b/src/app/LoginPage.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Overpass:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit&family=Overpass:wght@800&display=swap');
 *{
-  font-family: 'Overpass', sans-serif;
+  font-family: 'Kanit', sans-serif;
 }
 
 .Container{
@@ -21,10 +21,19 @@
     padding-bottom: 50px;
     font-size: 30px;
   }
+
+  .LoginTextTH{
+    font-size: 15px;
+    font-weight: bold;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    font-family: 'kanit';
+  }
   
   .Username,
   .Password {
-    /* padding: 15px 20px; */
+    padding: 3px;
     margin-bottom: 5px;
     border: none;
     width: 80%;  
@@ -39,8 +48,9 @@
 .LoginButton {
     margin-top: 30px;
     padding: 10px 20px;
-    background-color: #8ED19D;
-    color: #fff;
+    font-weight: bold;
+    background-color: #68DE7C;
+    color: #000000;
     border: none;
     border-radius: 5px;
     cursor: pointer;
