--- a/src/app/Dashboard/DashboardPage.css
+++ b/src/app/Dashboard/DashboardPage.css
@@ -74,3 +74,17 @@ font-weight: bold;
     align-items: center;
     font-weight: bold;
   }
+
+  .spinner-container {
+    justify-content: center;
+    display: flex;
+    align-items: center; /* Center vertically */
+    position: fixed; /* Fix the position */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.7); /* Add a semi-transparent background */
+    z-index: 9999; /* Make sure it's on top of everything */
+  }
+  
