--- a/src/app/InsideMypatient/MyPatientPage.css
+++ b/src/app/InsideMypatient/MyPatientPage.css
@@ -28,9 +28,19 @@
     width: 80%;
   }
 
-  /* .seperate{
-    padding: 10px;
-  } */
+  .spinner-container {
+    justify-content: center;
+    display: flex;
+    align-items: center; /* Center vertically */
+    position: fixed; /* Fix the position */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.7); /* Add a semi-transparent background */
+    z-index: 9999; /* Make sure it's on top of everything */
+  }
+  
 
   .buttoncontainer{
     display:flex;
