--- a/src/app/InsideMypatient/MyPatientPage.css
+++ b/src/app/InsideMypatient/MyPatientPage.css
@@ -49,9 +49,8 @@
     flex-direction: row;
     margin-top: 20px;
   }
-.containercard{
-  /* margin-bottom: 50px; */
-}
+/* .containercard{
+} */
 
 .addButton {
   background-color: #198754;
