--- a/src/app/Addpt/AddPage.css
+++ b/src/app/Addpt/AddPage.css
@@ -13,7 +13,7 @@
   align-items: center;
 }
 
-.ID_SearchBox {
+/* .ID_SearchBox {
   margin: auto;
   display: flex;
   padding: 15px 15px;
@@ -24,9 +24,9 @@
   background: #eee;
   font-family: "Kanit", sans-serif;
   font-size: 15px;
-}
+} */
 
-.Box {
+/* .Box {
   width: 80%;
   padding-left: 30px;
   display: flex;
@@ -54,9 +54,9 @@
 .PID {
   margin-top: 1px;
   margin-bottom: 10px;
-}
+} */
 
-.Text {
+/* .Text {
   color: #000000;
   font-weight: 800;
   margin-bottom: 5px;
@@ -64,23 +64,21 @@
   font-size: 20px;
   display: flex;
   padding-left: 10%;
-  /* padding-right: 2vw;*/
-}
+} */
 
-.input {
+/* .input {
   display: flex;
   width: 100%;
   height: 40px;
-  margin-inline: auto;
   padding-left: 10px;
   padding-right: 10px;
   background: #f5f5f5;
   font-size: 15px;
   border-radius: 5px;
   align-items: center;
-}
+} */
 
-.button {
+/* .button {
   display: flex;
   width: 40px;
   height: 40px;
@@ -91,11 +89,12 @@
   background: #00da12;
   color: #ffffff;
   align-items: center;
-}
+} */
 
-.searchBar {
+/* .searchBar {
   display: flex;
   flex-direction: row;
-  margin-inline: auto;
+  margin-left: 10%;
+  margin-right: 10%;
   width: 80%;
-}
+} */
