--- a/src/Component/Navbarbuttom.css
+++ b/src/Component/Navbarbuttom.css
@@ -1,3 +1,4 @@
+@import "tailwindcss/utilities";
 /* .Home{  
     background-color: pink;
     color: #B83280;
@@ -13,8 +14,6 @@
     color: #319795;
 } */
 
-
-
 /* .Patient,.Home,.Record{ 
     background-color: pink;
     color: #B83280;
@@ -25,7 +24,9 @@
   color: #2563EB; 
 } */
 
-.Patient,.Home,.Record{
-    background-color: #B2F5EA;
-    color: #319795;
+.Patient,
+.Home,
+.Record {
+  background-color: #b2f5ea;
+  color: #319795;
 }
