--- a/src/app/Dashboard/DashboardPage.css
+++ b/src/app/Dashboard/DashboardPage.css
@@ -88,3 +88,7 @@ font-weight: bold;
     z-index: 9999; /* Make sure it's on top of everything */
   }
   
+  .IconHome{
+    width: 50px;
+    height: 50px;
+  }
