--- a/src/app/InsideMypatient/MyPatientPage.css
+++ b/src/app/InsideMypatient/MyPatientPage.css
@@ -9,7 +9,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-top: 80px ;
+  /* margin-top: 80px ; */
   margin-bottom: 30px ;
   width: 500;
 }
@@ -68,3 +68,8 @@
 
 }
 
+.Icon{
+  margin-top: 50px;
+  height: 50px;
+  width: 50px;
+}
