--- a/src/app/Login/LoginPage.css
+++ b/src/app/Login/LoginPage.css
@@ -64,4 +64,15 @@
     background-color: #4daa61;
   }
 
-  
+  .spinner-container {
+    justify-content: center;
+    display: flex;
+    align-items: center; /* Center vertically */
+    position: fixed; /* Fix the position */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.7); /* Add a semi-transparent background */
+    z-index: 9999; /* Make sure it's on top of everything */
+  }
