--- a/src/app/Search/SearchPage.css
+++ b/src/app/Search/SearchPage.css
@@ -6,17 +6,6 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-.SearchIcon{
-  height: 50px;
-  width: 50px;
-}
-
-.IconWrapper{
-  display: flex;
-  justify-content: center;
-  margin-top: 50px;
-}
-
 .spinner-container {
   justify-content: center;
   display: flex;
@@ -26,6 +15,11 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 255, 0.7); /* Add a semi-transparent background */
+  background-color: rgba(
+    255,
+    255,
+    255,
+    0.7
+  ); /* Add a semi-transparent background */
   z-index: 9999; /* Make sure it's on top of everything */
 }
