--- a/src/Component/formlayout.css
+++ b/src/Component/formlayout.css
@@ -1,11 +1,4 @@
-body {
-    background: #ffffff;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-      "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-      sans-serif;
-    color: white;
-    padding: 0 20px 100px;
-  }
+
   
   .h1 {
     margin-top: 80px;
@@ -59,14 +52,14 @@ body {
     text-align: left;
     display: block;
     margin: 5px 0;
-    color: rgb(1, 1, 1);
+    color: rgb(2, 2, 2);
     font-size: 14px;
     font-weight: 200;
   }
   
   button[type="submit"],
   .button {
-    background: #ec5990;
+    background: #61fe93;
     color: rgb(0, 0, 0);
     text-transform: uppercase;
     border: none;
