--- a/src/app/Search/SearchPage.css
+++ b/src/app/Search/SearchPage.css
@@ -23,3 +23,26 @@
   ); /* Add a semi-transparent background */
   z-index: 9999; /* Make sure it's on top of everything */
 }
+
+.api-data-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 20px;
+  flex-direction: column;
+  
+}
+
+.api-data-button {
+  margin-right: 10px;
+  margin-bottom: 10px;
+  padding: 5px 10px;
+  background-color: #BFDBFE;
+  color: #2563EB;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.api-data-button:hover {
+  background-color: rgb(10, 10, 10);
+}
