--- a/src/app/Inform/InformPage.css
+++ b/src/app/Inform/InformPage.css
@@ -48,19 +48,7 @@
     border-radius: 5px;
   }
 
-  form button{
-    padding: 15px;
-    background: #ff5361;
-    color: #000000;
-    font-size: px;
-    border:0;
-    outline: none;
-    cursor: pointer;
-    width: 150px;
-    margin: 10px;
-    align-items: center;
-  }
-
+  
   .name{
     display: flex;
     flex-direction: row;
@@ -68,15 +56,16 @@
 
   }
 
-  form textarea{
-    width: 100%;
-    height: 59px;
-    padding: 15px;
-    outline: none;
-    resize: none;
-    font-size: 16px;
-    margin-top: 10px;
-    border-radius: 5px;
-    background: #f5f5f5;
-  }
+  
+
+
+.formlayout{
+  display:flex;
+  flex-direction: column;
+  padding: 2vw 4vw;
+  width: 100%;
+  max-width: 100%;
+  border-radius: 10px;
+  justify-content: center;
+}
 
