--- a/src/app/PatientHistory/MyPatientPage.css
+++ b/src/app/PatientHistory/MyPatientPage.css
@@ -9,7 +9,6 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  /* margin-top: 80px ; */
   margin-bottom: 30px ;
   width: 500;
 }
@@ -17,7 +16,7 @@
 
 .Name,.ID{
     color: rgb(0, 0, 0);
-    background-color: #B2F5EA;
+    background-color: #e5fffb;
     color: #1d5554;
     justify-content: center;
     display: flex;
@@ -50,9 +49,6 @@
     flex-direction: row;
     margin-top: 20px;
   }
-/* .containercard{
-} */
-
 
 
 .card{
@@ -68,3 +64,11 @@
   width: 50px;
 }
 
+.box{
+  padding: 20px;
+  background-color: #B2F5EA;
+  margin-top: 20px;
+  color: #1d5554;
+  border-radius: 6px;
+  max-width: 400px;
+}
