--- a/app/Inform/styles.css
+++ b/app/Inform/styles.css
@@ -38,7 +38,7 @@ form input {
   margin: 10px 0;
   padding: 4px;
   outline: none;
-  background: #f5f5f5;
+  background:white;
   font-size: 16px;
   border-radius: 5px;
 }
@@ -57,4 +57,10 @@ form input {
   max-width: 100%;
   border-radius: 10px;
   justify-content: center;
+}
+
+
+.Afield{
+width: 200px;
+height: 200px;
 }
