--- a/app/Inform/styles.css
+++ b/app/Inform/styles.css
@@ -64,3 +64,16 @@ form input {
 width: 200px;
 height: 200px;
 }
+
+.Tabview{
+
+  margin-top: 150px;
+}
+
+.panel{
+  margin-top: 200px;
+}
+
+.test{
+  margin-top: 150px;
+}
