--- a/component/Form/formlayout.css
+++ b/component/Form/formlayout.css
@@ -14,7 +14,7 @@
  }
 
   .form {
-    max-width: 100%;
+    /* max-width: 100%; */
     align-items: center;
     margin: 0 auto;
   }
@@ -35,7 +35,7 @@
     margin-top: auto;
     margin-bottom: 10px;
     border-radius: 4px;
-    width: 40px;
+    /* width: 40px; */
     margin-right:5px;
     
  }
@@ -43,7 +43,7 @@
   input {
     display: block;
     box-sizing: border-box;
-    width: 100%;
+    /* width: 100%; */
     border-radius: 4px;
     border: 1px solid white;
     padding: 10px 15px;
@@ -78,7 +78,7 @@
     font-size: 16px;
     font-weight: 100;
     border-radius: 4px;
-    width: 400px;
+    /* width: 400px; */
     position: center;
     
     
@@ -100,8 +100,8 @@
     color: white;
     letter-spacing: 0px;
     text-transform: none;
-    padding: 10px;
-    width: 400px;
+    /* padding: 10px; */
+    /* width: 400px; */
   }
   
   /* Center the button horizontally */
@@ -144,7 +144,7 @@
 
   .textarearesize {
     color: #000000;
-    width: 300px;
+    /* width: 300px; */
     border-radius: 4px;
     resize: inline; /* Disable manual resizing */
     overflow: hidden; /* Hide any overflowing content */
@@ -153,12 +153,13 @@
   }
 
   .Obody{
+    display: flex;
+    flex-direction:row;
     background-color: rgb(189, 217, 253);
     border-radius: 4px;
     border: 15px solid rgb(189, 217, 253);
-    width: 400px;
-    margin-bottom: 1px;
-    gap: 10px
+    /* margin-bottom: 1px; */
+    /* gap: 10px */
   }
 
 
@@ -167,7 +168,7 @@
     background-color: rgb(250, 208, 208);
     border-radius: 4px;
     border: 15px solid rgb(250, 208, 208);
-    width: 400px;
+    /* width: 400px; */
     
     margin-bottom: 1px;
     gap: 10px
@@ -178,7 +179,7 @@
     background-color: rgb(234, 197, 255);
     border-radius: 4px;
     border: 15px solid rgb(234, 197, 255);
-    width: 400px;
+    /* width: 400px; */
     margin-bottom: 1px;
     gap: 10px
   }
@@ -188,7 +189,7 @@
     background-color: rgb(163, 255, 224);
     border-radius: 4px;
     border: 15px solid rgb(163, 255, 224);
-    width: 400px;
+    /* width: 400px; */
     margin-bottom: 1px;
     gap: 10px
   } */
@@ -202,7 +203,7 @@
     border: 1px solid #ccc;
     margin: 20px;
     padding: 10px;
-    max-width: auto;
+    /* max-width: auto; */
     background-color: #fff;
   }
   
@@ -230,4 +231,16 @@
   .tab-content {
     padding: 20px;
     border-top: 1px solid #ccc;
+  }
+
+  .deletebutton{
+    border-radius: 10px;
+    padding: 5px;
+    height: 50px; 
+  }
+
+  .Addbutton{
+    border-radius: 10px;
+    padding: 5px;
+    height: 50px; 
   }
