--- a/component/Form/formlayout.css
+++ b/component/Form/formlayout.css
@@ -45,12 +45,7 @@
   float: right;
 }
 
-.NDXformcontainer{
-  background-color: #5fe5ac;
-  margin: 20px 20px;
-  padding: 20px 20px;
-  border-radius: 10px;
-}
+
 
 .buttongroup{
   display: flex;
@@ -64,4 +59,39 @@
 .gapInput{
   margin-bottom: 5px;
   font-weight: bolder;
+}
+
+.NDXformcontainer{
+  background-color: #5fe5ac;
+  margin: 20px 20px;
+  padding: 20px 20px;
+  border-radius: 10px;
+}
+
+.Sformcontainer{
+  background-color: #ff99e6;
+  margin: 20px 20px;
+  padding: 20px 20px;
+  border-radius: 10px;
+}
+
+.Iformcontainer{
+  background-color: #d580ff;
+  margin: 20px 20px;
+  padding: 20px 20px;
+  border-radius: 10px;
+}
+
+.Oformcontainer{
+  background-color: #66e0ff;
+  margin: 20px 20px;
+  padding: 20px 20px;
+  border-radius: 10px;  
+}
+
+.Eformcontainer{
+  background-color: #99ff99;
+  margin: 20px 20px;
+  padding: 20px 20px;
+  border-radius: 10px;
 }
