--- a/app/Mypatient/styles.css
+++ b/app/Mypatient/styles.css
@@ -23,3 +23,49 @@
   ); /* Add a semi-transparent background */
   z-index: 9999; /* Make sure it's on top of everything */
 }
+
+.patient-card {
+  width: 80%; /* Change the width as needed */
+  min-height: 90px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: #b2f5ea;
+  font-weight: bold;
+  margin-bottom: 15px;
+  margin-left: 10%;
+  padding-left: 30px;
+  padding-right: 0px;
+  border-radius: 10px;
+  color: #319795;
+}
+
+.patient-info {
+  cursor: pointer;
+}
+
+.status-dot {
+  background-color: #65eb89;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.add-button {
+  color: #319795;
+  font-size: 30px;
+}
+
+.card_container {
+  display: flex;
+  flex-wrap: wrap; /* Allows items to wrap to the next row on smaller screens */
+  justify-content: flex-start; /* Adjust alignment as needed */
+}
+
+@media (min-width: 768px) {
+  .patient-card {
+    width: 35%;
+  }
+}
