update input and textarea

--- a/component/Form/formlayout.css
+++ b/component/Form/formlayout.css
@@ -100,10 +100,11 @@
 .textarearesize{
   width: 300px;
  padding: 6px;
+ border-radius: 7px ;
 }
 
 
 input {
 padding: 6px;
-
+border-radius: 7px ;
 }
