--- a/app/Mypatient/styles.css
+++ b/app/Mypatient/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Overpass:wght@800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kanit&family=Overpass:wght@800&display=swap");
 * {
   font-family: "Kanit", sans-serif;
 }
