--- a/component/backBtn.css
+++ b/component/backBtn.css
@@ -5,16 +5,23 @@
 }
 
 .backButton {
+  position: relative;
+  width: 20px; /* Adjust the width and height to your preference */
+  height: 20px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+}
+
+.backButton .icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: #000000;
+  font-size: 30px;
+}
     
-    color: #000000;
-    padding: 5px 10px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    text-decoration: none;
-  }
-  
   .backButton:hover {
     color: #2a91ff;
   }
