--- a/component/backBtn.css
+++ b/component/backBtn.css
@@ -12,15 +12,10 @@
   border: none;
   cursor: pointer;
   padding: 0;
+  font-size: large;
 }
 
-.backButton .icon {
-  position: absolute;
-  top: 0;
-  left: 0;
-  color: #000000;
-  font-size: 30px;
-}
+
     
   .backButton:hover {
     color: #2a91ff;
