--- a/app/MypatientHistory/styles.css
+++ b/app/MypatientHistory/styles.css
@@ -77,3 +77,13 @@
   margin-top: 30px;
   color: #1d5554;
 }
+
+.addbutton {
+  background-color: rgb(84, 133, 197);
+  padding: 8px 10px;
+  border-radius: 5px;
+  color: white;
+  text-align: center;
+  flex: 1;
+  margin-left: 20px;
+}
