--- a/app/RecordData/styles.css
+++ b/app/RecordData/styles.css
@@ -3,7 +3,6 @@
   font-family: 'Kanit', sans-serif;
 }
 
-
 .Container{
   display: flex;
   justify-content: center;
@@ -70,11 +69,20 @@
   margin-top: 20px;
   color: #1d5554;
   border-radius: 6px;
-  max-width: 400px;
+  width: 370px;
 }
 
-.NoRecord{
-  margin-top: 30px;
-  font-weight: bold;
+.containerbox{
+  /* display: flex; */
+  /* flex-direction: row; */
+  
 
 }
+
+
+/* @media (min-width: 768px){
+
+  .box{
+    width: 730px;
+  }
+} */
