--- a/app/Search/styles.css
+++ b/app/Search/styles.css
@@ -58,7 +58,7 @@
   background-color: #BFDBFE;
   font-weight: bold;
   margin-bottom: 15px;
-  margin-left: 10%;
+  margin-left: 20px;
   padding-left: 30px;
   padding-right: 0px;
   border-radius: 10px;
@@ -87,12 +87,19 @@
 .card_container {
   display: flex;
   flex-wrap: wrap; /* Allows items to wrap to the next row on smaller screens */
-  justify-content: flex-start; /* Adjust alignment as needed */
+  justify-content: center;
 }
 
 
 @media (min-width: 768px) {
   .patient-card{
     width: 35%;
+  }
+}
+
+
+@media (min-width: 1024px) {
+  .patient-card{
+    width: 25%;
   }
 }
