--- a/app/RecordData/styles.css
+++ b/app/RecordData/styles.css
@@ -80,9 +80,16 @@
 }
 
 
-/* @media (min-width: 768px){
+@media (min-width: 768px){
 
   .box{
     width: 730px;
   }
-} */
+}
+
+@media (min-width: 1024px){
+
+  .box{
+    width: 950px;
+  }
+}
