--- a/app/MypatientHistory/styles.css
+++ b/app/MypatientHistory/styles.css
@@ -71,6 +71,8 @@
   color: #1d5554;
   border-radius: 6px;
   max-width: 400px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .Btn{
@@ -89,14 +91,13 @@
 }
 
 .containercard{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  background-color: #BFDBFE;
+
 }
 
 @media(min-width:768px){
   .containercard{
-    width: 80%;
+    display: flex;
+    flex-direction: row;
+    background-color: #BFDBFE;
   }
 }
