--- a/app/Search/styles.css
+++ b/app/Search/styles.css
@@ -46,60 +46,16 @@
   background-color: rgb(10, 10, 10);
 }
 
-
 /* SearchPatient.css */
-
-.patient-card {
-  width: 80%; /* Change the width as needed */
-  min-height: 90px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  background-color: #BFDBFE;
-  font-weight: bold;
-  margin-bottom: 15px;
-  margin-left: 20px;
-  padding-left: 30px;
-  padding-right: 0px;
-  border-radius: 10px;
-  color: #2563EB;
-}
-
 .patient-info {
   cursor: pointer;
 }
 
 .status-dot {
-  background-color: #65EB89;
+  background-color: #65eb89;
   width: 20px;
   height: 20px;
   border-radius: 50%;
   display: inline-block;
   margin-right: 10px;
-}
-
-.add-button {
-  color: #2563EB;
-  font-size: 45px;
-}
-
-
-.card_container {
-  display: flex;
-  flex-wrap: wrap; /* Allows items to wrap to the next row on smaller screens */
-  justify-content: center;
-}
-
-
-@media (min-width: 768px) {
-  .patient-card{
-    width: 35%;
-  }
-}
-
-
-@media (min-width: 1024px) {
-  .patient-card{
-    width: 25%;
-  }
 }
