--- a/app/Login/styles.css
+++ b/app/Login/styles.css
@@ -1,78 +1,87 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit&family=Overpass:wght@800&display=swap');
-*{
-  font-family: 'Kanit', sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Kanit&family=Overpass:wght@800&display=swap");
+* {
+	font-family: "Kanit", sans-serif;
 }
 
-.Container{
-    margin: 0 auto;   
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+.Container {
+	margin: 0 auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
 .LoginText {
-    font-size: 15px;
-    font-weight: bold;
-    text-align: center;
-    margin: 20px 20px;
-    display: flex;
-    flex-direction: column;
-    padding-top: 150px;
-    padding-bottom: 50px;
-    font-size: 30px;
-  }
+	font-size: 15px;
+	font-weight: bold;
+	text-align: center;
+	margin: 20px 20px;
+	display: flex;
+	flex-direction: column;
+	padding-top: 150px;
+	padding-bottom: 50px;
+	font-size: 30px;
+}
 
-  .LoginTextTH{
-    font-size: 15px;
-    font-weight: bold;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    font-family: 'kanit';
-  }
-  
-  .Username,
-  .Password {
-    padding: 3px;
-    margin-bottom: 5px;
-    border: none;
-    width: 80%;  
-    max-width: 300px;
-    align-items: center;
+.LoginTextTH {
+	font-size: 15px;
+	font-weight: bold;
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	font-family: "kanit";
+}
+
+.Username,
+.Password {
+	padding: 3px;
+	margin-bottom: 5px;
+	border: none;
+	width: 80%;
+	max-width: 300px;
+	align-items: center;
 }
 .Username::placeholder,
 .Password::placeholder {
-    font-size: 15px;
+	font-size: 15px;
 }
 
 .LoginButton {
-    margin-top: 30px;
-    padding: 10px 20px;
-    font-weight: bold;
-    background-color: #68DE7C;
-    color: #000000;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    width: 100%;
-    font-size: 15px;
-    max-width: 300px;
-    display: flex;
-    justify-content: center;
+	margin-top: 30px;
+	padding: 10px 20px;
+	font-weight: bold;
+	background-color: #68de7c;
+	color: #000000;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+	width: 100%;
+	font-size: 15px;
+	max-width: 300px;
+	display: flex;
+	justify-content: center;
 }
-  .LoginButton:hover {
-    background-color: #4daa61;
-  }
+.LoginButton:hover {
+	background-color: #4daa61;
+}
 
-  .spinner-container {
-    justify-content: center;
-    display: flex;
-    align-items: center; /* Center vertically */
-    position: fixed; /* Fix the position */
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.7); /* Add a semi-transparent background */
-    z-index: 9999; /* Make sure it's on top of everything */
-  }
+.spinner-container {
+	justify-content: center;
+	display: flex;
+	align-items: center; /* Center vertically */
+	position: fixed; /* Fix the position */
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(
+		255,
+		255,
+		255,
+		0.7
+	); /* Add a semi-transparent background */
+	z-index: 9999; /* Make sure it's on top of everything */
+}
+
+.error {
+	color: red;
+}
